# backend/controllers/diseasetype_controller.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"fmt"
 	"context"
 	"strconv"
 
@@ -130,6 +131,85 @@ func (ctl *DiseasetypeController) ListDiseasetype(c *gin.Context) {
 	c.JSON(200, diseasetypes)
 }
 
+// DeleteDiseasetype handles DELETE requests to delete a diseasetype entity
+// @Summary Delete a diseasetype entity by ID
+// @Description get diseasetype by ID
+// @ID delete-diseasetype
+// @Produce  json
+// @Param id path int true "Diseasetype ID"
+// @Success 200 {object} gin.H
+// @Failure 400 {object} gin.H
+// @Failure 404 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /diseasetypes/{id} [delete]
+func (ctl *DiseasetypeController) DeleteDiseasetype(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	err = ctl.client.Diseasetype.
+		DeleteOneID(int(id)).
+		Exec(context.Background())
+	if err != nil {
+		c.JSON(404, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
+}
+
+// UpdateDiseasetype handles PUT requests to update a diseasetype entity
+// @Summary Update a diseasetype entity by ID
+// @Description update diseasetype by ID
+// @ID update-diseasetype
+// @Accept   json
+// @Produce  json
+// @Param id path int true "Diseasetype ID"
+// @Param diseasetype body ent.Diseasetype true "Diseasetype entity"
+// @Success 200 {object} ent.Diseasetype
+// @Failure 400 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /diseasetypes/{id} [put]
+func (ctl *DiseasetypeController) UpdateDiseasetype(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	obj := ent.Diseasetype{}
+	if err := c.ShouldBind(&obj); err != nil {
+		c.JSON(400, gin.H{
+			"error": "diseasetype binding failed",
+		})
+		return
+	}
+	obj.ID = int(id)
+	fmt.Println(obj.ID)
+	u, err := ctl.client.Diseasetype.
+		UpdateOneID(int(id)).
+		SetName(obj.Name).
+		Save(context.Background())
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": "update failed",
+		})
+		return
+	}
+
+	c.JSON(200, u)
+}
+
+
+
 // NewDiseasetypeController creates and registers handles for the diseasetype controller
 func NewDiseasetypeController(router gin.IRouter, client *ent.Client) *DiseasetypeController {
 	dtc := &DiseasetypeController{
@@ -144,6 +224,9 @@ func (ctl *DiseasetypeController) register() {
 	diseasetypes := ctl.router.Group("/diseasetypes")
 
 	diseasetypes.GET("", ctl.ListDiseasetype)
+	
 	diseasetypes.POST("", ctl.CreateDiseasetype)
 	diseasetypes.GET(":id", ctl.GetDiseasetype)
+	diseasetypes.PUT(":id", ctl.UpdateDiseasetype)
+	diseasetypes.DELETE(":id", ctl.DeleteDiseasetype)
 }
